--- a/Cloud-Print.me/Cloud-Print.me/en.lproj/MainStoryboard.storyboard
+++ b/Cloud-Print.me/Cloud-Print.me/en.lproj/MainStoryboard.storyboard
@@ -331,14 +331,42 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="e9y-2e-ANh">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProfileTableCell" id="e9y-2e-ANh" customClass="TwoLabelsCustomCell">
                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="First Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HnG-K9-EE5">
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="94" id="VKq-g6-oo8"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Second label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yOh-1h-RSd">
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="184" id="Tlh-f3-Dka"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <constraints>
+                                    <constraint firstItem="yOh-1h-RSd" firstAttribute="leading" secondItem="HnG-K9-EE5" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="agL-R1-QYb"/>
+                                    <constraint firstItem="yOh-1h-RSd" firstAttribute="baseline" secondItem="HnG-K9-EE5" secondAttribute="baseline" type="default" id="mqm-mm-4yr"/>
+                                    <constraint firstItem="HnG-K9-EE5" firstAttribute="leading" secondItem="e9y-2e-ANh" secondAttribute="leading" constant="20" type="default" id="tkz-T5-azt"/>
+                                    <constraint firstItem="HnG-K9-EE5" firstAttribute="top" secondItem="e9y-2e-ANh" secondAttribute="top" constant="11" id="wKs-pr-dZi"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="firstLabel" destination="HnG-K9-EE5" id="7OE-dr-3zT"/>
+                                    <outlet property="secondLabel" destination="yOh-1h-RSd" id="5RV-fy-Nsm"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -409,6 +437,33 @@
         <image name="orders.png" width="66" height="55"/>
         <image name="profile.png" width="50" height="60"/>
     </resources>
+    <classes>
+        <class className="BalanceViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BalanceViewController.h"/>
+        </class>
+        <class className="HomeViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
+        </class>
+        <class className="MessagesViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MessagesViewController.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="OrdersViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/OrdersViewController.h"/>
+        </class>
+        <class className="ProfileViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ProfileViewController.h"/>
+        </class>
+        <class className="TwoLabelsCustomCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TwoLabelsCustomCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="firstLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="secondLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
