--- a/Cloud-Print.me/Cloud-Print.me/en.lproj/MainStoryboard.storyboard
+++ b/Cloud-Print.me/Cloud-Print.me/en.lproj/MainStoryboard.storyboard
@@ -257,6 +257,10 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="F2Y-Ou-v33"/>
                     <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="_userNameLabel" destination="hxX-mr-gac" id="na4-ko-kNt"/>
+                        <segue destination="bua-oM-HRe" kind="modal" identifier="LoginSegue" modalTransitionStyle="flipHorizontal" id="YVl-1x-wZL"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a7B-lO-3jt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -269,7 +273,7 @@
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="bHl-WP-3Md">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="v5b-ic-Yy0">
                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
@@ -380,6 +384,71 @@
             </objects>
             <point key="canvasLocation" x="1412" y="-1281"/>
         </scene>
+        <!--Login View Controller-->
+        <scene sceneID="7mY-y2-ldn">
+            <objects>
+                <viewController id="bua-oM-HRe" customClass="LoginViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="41r-Bk-InE">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zse-UO-aCr">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="197" id="xfG-kL-suw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next"/>
+                                <connections>
+                                    <outlet property="delegate" destination="bua-oM-HRe" id="yos-Ah-lvp"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="пароль" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Ab-bD-1qw">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="bua-oM-HRe" id="Ban-OQ-Qcm"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bSG-BZ-X6u">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="123" id="2PE-cj-7jU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal">
+                                    <string key="title" base64-UTF8="YES">
+ENCb0L7Qs9C40L0
+</string>
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="loginClicked:" destination="bua-oM-HRe" eventType="touchUpInside" id="6Ty-lc-hq0"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="bSG-BZ-X6u" firstAttribute="centerX" secondItem="2Ab-bD-1qw" secondAttribute="centerX" type="default" id="0vY-F8-zC0"/>
+                            <constraint firstItem="2Ab-bD-1qw" firstAttribute="trailing" secondItem="zse-UO-aCr" secondAttribute="trailing" type="default" id="IXS-aY-23L"/>
+                            <constraint firstItem="zse-UO-aCr" firstAttribute="top" secondItem="41r-Bk-InE" secondAttribute="top" constant="154" id="NdU-fC-lOF"/>
+                            <constraint firstItem="2Ab-bD-1qw" firstAttribute="leading" secondItem="zse-UO-aCr" secondAttribute="leading" type="default" id="SpG-6J-EEq"/>
+                            <constraint firstItem="zse-UO-aCr" firstAttribute="leading" secondItem="41r-Bk-InE" secondAttribute="leading" constant="64" id="TAb-B6-zaE"/>
+                            <constraint firstItem="2Ab-bD-1qw" firstAttribute="top" secondItem="41r-Bk-InE" secondAttribute="top" constant="207" id="ZCN-2e-XdD"/>
+                            <constraint firstAttribute="bottom" secondItem="bSG-BZ-X6u" secondAttribute="bottom" constant="139" id="opt-lr-WeP"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="_emailTextField" destination="zse-UO-aCr" id="zO6-yW-326"/>
+                        <outlet property="_passwordTextField" destination="2Ab-bD-1qw" id="rS5-ne-A4f"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t7B-aH-Zom" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="868" y="-806"/>
+        </scene>
         <!--Messages View Controller-->
         <scene sceneID="I8I-OX-x2T">
             <objects>
@@ -443,6 +512,12 @@
         </class>
         <class className="HomeViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
+        </class>
+        <class className="LoginViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="loginClicked:"/>
+            </relationships>
         </class>
         <class className="MessagesViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MessagesViewController.h"/>
